tests/spec/fail/raise_err_defer.aja
fuc boom() -> void:
    defer print("cleanup")
    raiseErr("kaboom")

boom()
